<resources>
    <string name="app_name">projeto1</string>
    <string name="teste_3">Teste 3</string>
    <string name="o_que">O que é?</string>
    <string name="teste_1">Teste 1</string>
    <string name="teste_2">Teste 2</string>
    <string name="daltonismo_um_dist_rbio_da_vis_o_que_interfere_na_percep_o_das_cores_tamb_m_chamado_de_discromatopsia_ou_discromopsia_sua_principal_caracter_stica_a_dificuldade_para_distinguir_o_vermelho_e_o_verde_e_com_menos_frequ_ncia_o_azul_e_o_amarelo">
        Daltonismo é um distúrbio da visão que interfere na percepção das cores. Também chamado de discromatopsia ou
        discromopsia, sua principal característica é a dificuldade para distinguir o vermelho e o verde e, com menos
        frequência, o azul e o amarelo.
    </string>
    <string name="verificar">Verificar</string>
    <string name="suas_resposta">Suas Resposta</string>
    <string name="resposta_2">Resposta 2</string>
    <string name="resposta_1">Resposta 1</string>
    <string name="resposta3">Resposta 3</string>
    <string name="resposta_do_seu_teste">Resposta do seu teste</string>
    <string name="fa_a_o_teste">Faça o Teste !</string>
    <string name="que_numero_voc_ver_embaixo">Que numero você ver embaixo?</string>
    <string name="digite">Digite</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
</resources>
