<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/o_que"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:id="@+id/TituloEdit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.012" app:layout_constraintHorizontal_bias="0.389"/>
    <Button
            android:text="@string/teste_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/descricaoEdit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintVertical_bias="0.093" android:onClick="clique"/>
    <TextView
            android:text="@string/daltonismo_um_dist_rbio_da_vis_o_que_interfere_na_percep_o_das_cores_tamb_m_chamado_de_discromatopsia_ou_discromopsia_sua_principal_caracter_stica_a_dificuldade_para_distinguir_o_vermelho_e_o_verde_e_com_menos_frequ_ncia_o_azul_e_o_amarelo"
            android:layout_width="307dp"
            android:layout_height="103dp"
            android:id="@+id/descricaoEdit" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/TituloEdit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/teste_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintVertical_bias="0.0" android:onClick="clique"/>
    <Button
            android:text="@string/teste_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintVertical_bias="0.107" android:onClick="clique"/>
    <Button
            android:text="@string/verificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verificarButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintVertical_bias="0.678"/>
    <TextView
            android:text="@string/suas_resposta"
            android:layout_width="98dp"
            android:layout_height="17dp"
            android:id="@+id/subTitle2"
            app:layout_constraintTop_toBottomOf="@+id/subTitle1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toEndOf="@+id/button1"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.48"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/fa_a_o_teste"
            android:layout_width="307dp"
            android:layout_height="58dp"
            android:id="@+id/subTitle1" android:textSize="36sp"
            android:layout_marginBottom="416dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descricaoEdit" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/resposta_1"
            android:layout_width="96dp"
            android:layout_height="33dp"
            android:id="@+id/resultT1"
            app:layout_constraintStart_toEndOf="@+id/button1"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/subTitle2"/>
    <TextView
            android:text="@string/resposta_2"
            android:layout_width="92dp"
            android:layout_height="30dp"
            android:id="@+id/resultT2"
            app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/resultT1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/resposta3"
            android:layout_width="93dp"
            android:layout_height="29dp"
            android:id="@+id/resultT3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/resultT2"
            app:layout_constraintStart_toEndOf="@+id/button3" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/resposta_do_seu_teste"
            android:layout_width="148dp"
            android:layout_height="33dp"
            android:id="@+id/resultFinal"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/resultT3"
            app:layout_constraintStart_toEndOf="@+id/verificarButton" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.76" app:layout_constraintHorizontal_bias="0.7"/>
</androidx.constraintlayout.widget.ConstraintLayout>